Basic implementation of volunteer service
